--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- NORMALIZE -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -12,6 +13,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <!-- FONTE ROBOTO -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,18 +22,51 @@
       rel="stylesheet"
     />
 
+    <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/global.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap"
-      rel="stylesheet"
-    />
     <title>Pokedex</title>
   </head>
   <body>
-    <h1>hello world</h1>
+    <section class="content">
+      <h1 id="tituloPokedex">Pokedex</h1>
+      <ol class="pokemons">
+        <li class="pokemon">
+          <span class="number">#001</span>
+          <span class="name">Bulbasaur</span>
+          <div class="detail">
+            <ol class="types">
+              <li class="types">grass</li>
+              <li class="types">poison</li>
+            </ol>
+
+            <img src="./assets/svg/poke-bulbasaur.svg" alt="Bulbasaur" />
+          </div>
+        </li>
+        <!-- <li>
+          Ivysaur
+          <img src="./assets/svg/poke-ivysaur.svg" alt="Ivysaur" />
+        </li>
+        <li>
+          Venusaur
+          <img src="./assets/svg/poke-venusaur.svg" alt="Venusaur" />
+        </li>
+        <li>
+          Charmander
+          <img src="./assets/svg/poke-charmander.svg" alt="Charmander" />
+        </li>
+        <li>
+          Charmeleon
+          <img src="./assets/svg/poke-charmeleon.svg" alt="Charmeleon" />
+        </li>
+        <li>
+          Charizard
+          <img src="./assets/svg/poke-charizard.svg" alt="Charizard" />
+        </li> -->
+      </ol>
+    </section>
+
+    <!-- JAVA SCRIPT -->
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
