--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           <span class="name">Bulbasaur</span>
           <div class="detail">
             <ol class="types">
-              <li class="types">grass</li>
-              <li class="types">poison</li>
+              <li class="type">grass</li>
+              <li class="type">poison</li>
             </ol>
 
             <img src="./assets/svg/poke-bulbasaur.svg" alt="Bulbasaur" />
