--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/global.css" />
+    <link rel="stylesheet" href="./assets/css/pokedex.css" />
 
     <title>Pokedex</title>
   </head>
