Adicionando api e responsividade aos nomes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <section class="content">
       <h1 id="tituloPokedex">Pokedex</h1>
-      <ol class="pokemons">
+      <ol id="pokemonList" class="pokemons">
         <li class="pokemon">
           <span class="number">#001</span>
           <span class="name">Bulbasaur</span>
@@ -44,26 +44,6 @@
             <img src="./assets/svg/poke-bulbasaur.svg" alt="Bulbasaur" />
           </div>
         </li>
-        <!-- <li>
-          Ivysaur
-          <img src="./assets/svg/poke-ivysaur.svg" alt="Ivysaur" />
-        </li>
-        <li>
-          Venusaur
-          <img src="./assets/svg/poke-venusaur.svg" alt="Venusaur" />
-        </li>
-        <li>
-          Charmander
-          <img src="./assets/svg/poke-charmander.svg" alt="Charmander" />
-        </li>
-        <li>
-          Charmeleon
-          <img src="./assets/svg/poke-charmeleon.svg" alt="Charmeleon" />
-        </li>
-        <li>
-          Charizard
-          <img src="./assets/svg/poke-charizard.svg" alt="Charizard" />
-        </li> -->
       </ol>
     </section>
 
