melhorando as informações da API (imagens, ordem, tipo de atributo)

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <section class="content">
       <h1 id="tituloPokedex">Pokedex</h1>
       <ol id="pokemonList" class="pokemons">
-        <li class="pokemon">
-          <span class="number">#001</span>
+        <!-- <li class="pokemon">
+          <span class="number"></span>
           <span class="name">Bulbasaur</span>
           <div class="detail">
             <ol class="types">
@@ -43,7 +43,7 @@
 
             <img src="./assets/svg/poke-bulbasaur.svg" alt="Bulbasaur" />
           </div>
-        </li>
+        </li> -->
       </ol>
     </section>
 
