--- a/index.html
+++ b/index.html
@@ -31,23 +31,11 @@
   <body>
     <section class="content">
       <h1 id="tituloPokedex">Pokedex</h1>
-      <ol id="pokemonList" class="pokemons">
-        <!-- <li class="pokemon">
-          <span class="number"></span>
-          <span class="name">Bulbasaur</span>
-          <div class="detail">
-            <ol class="types">
-              <li class="type">grass</li>
-              <li class="type">poison</li>
-            </ol>
-
-            <img src="./assets/svg/poke-bulbasaur.svg" alt="Bulbasaur" />
-          </div>
-        </li> -->
-      </ol>
+      <ol id="pokemonList" class="pokemons"></ol>
     </section>
 
     <!-- JAVA SCRIPT -->
+    <script src="./assets/js/pokemon-model.js"></script>
     <script src="./assets/js/poke-api.js"></script>
     <script src="./assets/js/main.js"></script>
   </body>
