--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     <section class="content">
       <h1 id="tituloPokedex">Pokedex</h1>
       <ol id="pokemonList" class="pokemons"></ol>
+
+      <div class="pagination">
+        <button id="loadMoreButton" type="button">Load More</button>
+      </div>
     </section>
 
     <!-- JAVA SCRIPT -->
